--- a/source/ExcelAddIn/Properties/Resources.resx
+++ b/source/ExcelAddIn/Properties/Resources.resx
@@ -322,4 +322,16 @@
   <data name="selectedTableNull" xml:space="preserve">
     <value>Empty or null Table used for this action.  A valid Table must be used.</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="ErrorCreatingNewSchema" xml:space="preserve">
+    <value>An error occurred creating a new schema: {0}</value>
+  </data>
+  <data name="ExcelAddinFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExcelAddinFilter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UnableToLoadDatabases" xml:space="preserve">
+    <value>Unable to load databases for the given connection.</value>
+  </data>
 </root>
