Adding the new MyTreeView control

--- a/source/ExcelAddIn/Properties/Resources.resx
+++ b/source/ExcelAddIn/Properties/Resources.resx
@@ -337,4 +337,10 @@
   <data name="UnableToRetrieveData" xml:space="preserve">
     <value>Unable to retrieve data from '{0}'.</value>
   </data>
+  <data name="ArrowDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ArrowDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ArrowRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ArrowRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
