--- a/source/ExcelAddIn/Properties/Resources.resx
+++ b/source/ExcelAddIn/Properties/Resources.resx
@@ -343,4 +343,13 @@
   <data name="ArrowRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ArrowRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="db_Column_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\db.Column.16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="columnMappingIncomplete" xml:space="preserve">
+    <value>Column mapping for all columns in Excel selection is incomplete. Do you want to proceed with the current mapped data only?</value>
+  </data>
+  <data name="RemoveColumnConfirmation" xml:space="preserve">
+    <value>Are you sure you want to remove the selected column?</value>
+  </data>
 </root>
