- Added ExportDataHelper class to leverage the mapping and synchronization of data between Excel and MySQL (Classes/ExportDataHelper.cs). - Added MappedDataColName property to MySQLColumn class to know to which foreign column data is mapped (Classes/MySQLColumn.cs) - Removed Classes/MySQLSchemaInfo.cs from the project. - Assigned _isNew flag in MySQLTable class constructor (Classes/MySQLTable.cs). - Fixed a problem with collations in GetSchemaCollection method (Classes/Utilities.cs). - Added IconInfo struct, CreateIconIndirect and CreateCursor methods to create a custom cursor (Classes/Utilities.cs). - Added MultiHeaderDataGridView class which is a grid that displays 2 header rows (Controls/MultiHeaderDataGridView.cs, Controls/MultiHeaderDataGridView.Designer.cs, Controls/MultiHeaderDataGridView.resx). - Changed code in AppendDataToTable method to call the AppendDataToTableDialog class (Controls/TaskPaneControl.cs). - Added AppendDataToTableDialog dialog form to perform the Append Data to Existing MySQL Table feature (Forms/AppendDataToTableDialog.cs, Forms/AppendDataToTableDialog.Designer.cs, Forms/AppendDataToTableDialog.resx). - Extracted logic from ExportDataToTableDialog class to ExportDataHelper (Forms/ExportDataToTableDialog.cs). - Fixed a problem with checking the First Row Contains Headers checkbox when a single row was being exported (Forms/ExportDataToTableDialog.cs). - Removed Forms/OldExportDataToTableDialog.cs, Forms/OldExportDataToTableDialog.designer.cs, Forms/OldExportDataToTableDialog.resx from the project. - Changed code in exportDataToTable, editData_Click and exportToNewTable_Click methods to accomodate for changes on calling the export data dialogs (Panels/DBObjectSelectionPanel.cs). - Added Properties/DataSources/MySQLColumn.datasource and Properties/DataSources/MySQLTable.datasource files to the project. - Added some resources (Properties/Resources.Designer.cs).

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -121,13 +121,13 @@
   <data name="action_eer_rev_eng_db" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\action_eer_rev_eng_db.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="connectionClosedError" xml:space="preserve">
+  <data name="ConnectionClosedError" xml:space="preserve">
     <value>MySQL Connection is closed, must be opened first to perform action</value>
   </data>
-  <data name="connectionsFileNotFound" xml:space="preserve">
+  <data name="ConnectionsFileNotFound" xml:space="preserve">
     <value>Workbench connections.xml file not found</value>
   </data>
-  <data name="connectionStringNotSet" xml:space="preserve">
+  <data name="ConnectionStringNotSet" xml:space="preserve">
     <value>Can't open MySQL connection since connection string has not been set</value>
   </data>
   <data name="CurrentChangesLostConfirmation" xml:space="preserve">
@@ -310,16 +310,16 @@
   <data name="new_connection_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\new_connection_48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="selectedDBObjectNotTable" xml:space="preserve">
+  <data name="SelectedDBObjectNotTable" xml:space="preserve">
     <value>Selected DB Object used for this action must be of Type =Table.</value>
   </data>
-  <data name="selectedDBObjectNull" xml:space="preserve">
+  <data name="SelectedDBObjectNull" xml:space="preserve">
     <value>Empty or null DB Object used for this action.  A valid DB Object must be used.</value>
   </data>
-  <data name="selectedDBSchemaNull" xml:space="preserve">
+  <data name="SelectedDBSchemaNull" xml:space="preserve">
     <value>Empty or null DB Schema used for this action.  A valid Schema must be used.</value>
   </data>
-  <data name="selectedTableNull" xml:space="preserve">
+  <data name="SelectedTableNull" xml:space="preserve">
     <value>Empty or null Table used for this action.  A valid Table must be used.</value>
   </data>
   <data name="Error" xml:space="preserve">
@@ -346,10 +346,25 @@
   <data name="db_Column_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\db.Column.16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="columnMappingIncomplete" xml:space="preserve">
+  <data name="ColumnMappingIncomplete" xml:space="preserve">
     <value>Column mapping for all columns in Excel selection is incomplete. Do you want to proceed with the current mapped data only?</value>
   </data>
   <data name="RemoveColumnConfirmation" xml:space="preserve">
     <value>Are you sure you want to remove the selected column?</value>
+  </data>
+  <data name="chain_link_24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\chain_link.24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ColumnMappedOverwrite" xml:space="preserve">
+    <value>This column has already been mapped, do you want to overwrite existing mapping?</value>
+  </data>
+  <data name="ColumnMappedRemove" xml:space="preserve">
+    <value>This column has already been mapped, do you want to remove it and its mapping?</value>
+  </data>
+  <data name="TableNotNewInCreate" xml:space="preserve">
+    <value>Table must be new in order to create it in MySQL DB.</value>
+  </data>
+  <data name="ColumnsMappedOverwrite" xml:space="preserve">
+    <value>Some columns have already been mapped, do you want to overwrite existing mappings?</value>
   </data>
 </root>
