- Added ColumnsRequireQuotes property to MySQLColumn class (Classes\MySQLColumn.cs). - Added MySQLIndex class (Classes\MySQLIndex.cs). - Added Indexes, PrimaryKey and UniqueIndexes properties to MySQLTable class (Classes\MySQLTable.cs). - Added AddExtendedProperties, assembleSelectQuery, GetDataAdapterFromTable and NameToType methods (Classes\Utilities.cs). - Added EditTableData method (Controls\TaskPaneControl.cs). - Added EditChangesDialog and EditDataDialog classes (Forms\EditChangesDialog.cs and Forms\EditDataDialog.cs). - Added code to editData_Click method to openl the EditDataDialog form (Panels\DBObjectSelectionPanel.cs). - Added RevertDataConfirmation property string (Properties\Resources.resx).

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -358,4 +358,7 @@
   <data name="mysql-header-img" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mysql-header-img.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RevertDataConfirmation" xml:space="preserve">
+    <value>Current changes will be lost, are you sure you want to revert the data?</value>
+  </data>
 </root>
