--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -304,4 +304,7 @@
   <data name="PrimaryKeyColumnExistsWarning" xml:space="preserve">
     <value>Primary Key column cannot be created because another column has the same name.</value>
   </data>
+  <data name="Chain_Link_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\chain link-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
