--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -307,4 +307,7 @@
   <data name="Chain_Link_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\chain link-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ColumnDataNotUniqueWarning" xml:space="preserve">
+    <value>Data in the current column is not unique.</value>
+  </data>
 </root>
