- Added logic to remove/skip Empty Columns (with no data) in SetData and DetectTypes methods (Classes\MySQLDataTable.cs). - Added logic to create Multi-Column Primary Key and to skip the first column if the addPK property is false on the GetCreateSQL method (Classes\MySQLDataTable.cs). - Fixed logic to skip the first column's data on GetInsertSQL method if addPK property is false (Classes\MySQLDataTable.cs). - Fixed logic on the InsertDataWithAdapter method to have the rows created by the LoadDataRow method have their RowState as Added for the Update to actually have something to insert (Classes\MySQLDataTable.cs). - Added the CanBeOfMySQLDataType method to the MySQLDataColumn class to parse all the column's data to check if it can succesfully hold the values with a new give type, this will be called by the ExportDataForm class for validation and column coloring (Classes\MySQLDataTable.cs). - Added gridToolTip control to display a ToolTip when hovering over the grdPreviewData control, although it is not currently working (Forms\ExportDataForm.cs). - Fixed a bug in the showValidationWarning method that was not displaying the warning picture and label for the Column Options (Forms\ExportDataForm.cs). - Changed logic on btnCopySQL_Click method to use a StringBuilder and to add an "USE <schema>;" statement before the CREATE and the INSERT statements (Forms\ExportDataForm.cs). - Added logic to scroll to the selected column on the radAddPrimaryKey_CheckedChanged, radUseExistingColumn_CheckedChanged and cmbPrimaryKeyColumns_SelectedIndexChanged methods (Forms\ExportDataForm.cs). - Unchecking the chkUniqueIndex and chkCreateIndex checkboxes when the chkPrimaryKey checkbox is unchecked on the grdPreviewData_SelectionChanged and chkPrimaryKey_CheckedChanged methods (Forms\ExportDataForm.cs). - Fixed problem with warning not shown when changing state on chkUniqueIndex on chkUniqueIndex_CheckedChanged method (Forms\ExportDataForm.cs). - Moved the refreshing of the cmbPrimaryKey

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -310,4 +310,10 @@
   <data name="ColumnDataNotUniqueWarning" xml:space="preserve">
     <value>Data in the current column is not unique.</value>
   </data>
+  <data name="ExportColumnsGridToolTipCaption" xml:space="preserve">
+    <value>Use &lt;Alt + N&gt; to move to the next column and &lt;Alt + P&gt; to move to the previous one.</value>
+  </data>
+  <data name="ExportDataTypeNotSuitableWarning" xml:space="preserve">
+    <value>Selected Data Type is not suitable for all the values in this column.</value>
+  </data>
 </root>
